--- a/prebuilt/common/etc/init.local.rc
+++ b/prebuilt/common/etc/init.local.rc
@@ -10,10 +10,10 @@ on post-fs-data
     chown system system /cache/dalvik-cache
     chmod 0771 /cache/dalvik-cache
 
-on boot
     # Run sysinit
     start sysinit
 
+on boot
     chown system system /sys/block/mmcblk0/queue/scheduler
     chmod 0664 /sys/block/mmcblk0/queue/scheduler
 
@@ -46,3 +46,4 @@ service compcache /system/bin/handle_compcache
 service sysinit /system/bin/sysinit
     user root
     oneshot
+    disabled
